Resolución de medidas de pantalla, "arreglo de rupturas"

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1 class="titulo-inicio">GYM NEW OPPORT</h1>
         <div class="div-inicio">    
             <div class="div-videoInfo">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Q-f2T21zeTE?si=S5gaimS7Ct68bOKk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe class="video-inform" width="500px" height="310px" src="https://www.youtube.com/embed/Q-f2T21zeTE?si=S5gaimS7Ct68bOKk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div class="div-descVideo">
                 <h3 class="title-videoInform">Video Informativo</h3>
