Agregue grafico de inicio, complete casi toda la pagina de mas informacion, y le sume estilos, y "arregle las roturas"

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
         </div>
     </header>
     <main>
-        
-        (GRAFICO)
+        <img class="graf-inicio" src="./Img/grafico.png" alt="">
         <div class="div-grafInicio">
             <div class="div-grafConst">
                 <h3 class="graf-const">En la práctica, casi la mitad de la población se ejercita al menos una vez por semana.
