--- a/moreinfo.html
+++ b/moreinfo.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GYM NEW OPPORT</title>
+    <link rel="shortcut icon" href="./Img/logo.jpg" type="image/x-icon"> 
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -21,7 +22,77 @@
         <h1 class="titulo-info">MÁS INFORMACIÓN</h1>
     </header>
     <main>
-
+        <div class="div-masInfo">
+            <img class="img-masInfo" src="./Img/img+info.jpg" alt="">
+            <p class="info-fit"> Bueno, esta parte es para que me conozcan un poquito mas, acerca de mi vida fitnes.
+            Soy jugador de rugby en el club Los Matreros, donde basicamente paso la gran parte de mi tiempo,
+            ya sea entrenando (pasando la pelota, pateando la pelota, etc), corriendo, pero mas que nada 
+            me la paso en el gimnasio, aprovechando todo el tiempo del mundo para poder entrenar bien y sentir
+            un buen estimulo en cada respectivo musculo. Actualmente estoy utilizando el metodo Heavy Duty el
+            cual siento que si sigo entrenando de la forma en la que entreno, los cambios van a llegar pronto. 
+            Aunque no descarto la posibilidad de volver al Arnold Split.
+            </p>
+        </div>
+        <div class="metodos-cambio">
+            <div class="div-video-cambio">
+                <iframe class="video-cambio" width="560" height="315" src="https://www.youtube.com/embed/VV_al8nS6vY?si=ziaWuPotiTOP27_O" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="flecha">
+                <img class="img-flecha" src="./Img/flecha.jpg" alt="">
+            </div>
+            <section class="metodos">
+            <h3 class="titulo-metodos">Metodos de entrenamiento utilizados por mi:</h3>
+            <h5 class="desc-metodos"> En el ultimo tiempo he estado implementando el metodo "Heavy Duty", siento que al estar
+                usando este metodo hace relativamente poco tiempo, obviamente no voy a sentir ni notar los
+                "respectivos cambios" que deberian aparecer. Al principio de todo, donde arranque a entrenar, 
+                fue en un gimnasio convencional, haciendo rutinas "Full Body", ya que no sabia como organizar
+                ni mi tiempo ni mis rutinas, tampoco conocia el conectarme yo con el musculo, sin saber si estaba
+                o no entrenando bien, en ese tiempo no note buenos resultados, si sentia un poco mas de fuerza para 
+                los 3 o menos dias que iba. Luego de ese periodo, deje ese gimnasio, y empece a ir al del club, 
+                interiorizandome mas en el tema gimnasio, y ahi fue donde encontre el metodo "Arnold Split", 
+                donde consegui uno de mis primeros cambios fisicos y donde me puse el foco en darle mas interes a ello.
+            </h5>
+            </section>
+        </div>
+        <div class="tipos-metodos">
+            <div class="arnold-split">
+                <h3 class="titulo-arnold">Arnold Split</h3>
+                <h4 class="desc-arnold">
+                    El Arnold Split es una división semanal utilizada por Arnold durante su preparación 
+                    para su quinto Mr.Olympia en el año de 1974. 
+                    El principal problema con el programa original es el volumen de entrenamiento, 
+                    demasiado trabajo a una intensidad muy elevada para la mayoría de nosotros. 
+                    Consiste en entrenar 6 días a la semana. con tres rutinas diferentes. 
+                    Que son, pecho y espalda, hombro, tríceps y bíceps y pierna. 
+                    Estas rutinas se repiten dos veces en la semana.
+                </h4>
+            </div>
+            <div class="heavy-duty">
+                <h3 class="titulo-heavyDuty">Heavy Duty</h3>
+                <h4 class="desc-heavyDuty">
+                    El Heavy Duty, también considerado una filosofía de entrenamiento, 
+                    trata de entrenamientos de muy alta intensidad, poco volumen de sets y repeticiones, 
+                    un enfoque muy controlado no solo en las repeticiones positivas (por ejemplo, cuando haces curl de bicep, 
+                    el momento cuando estás contrayendo el músculo y subiendo la pesa hacia arriba), 
+                    sino también en las negativas (cuando estás bajando la pesa), y entrenamientos con espacios de 
+                    incluso cuatro o seis días 
+                    entre sesiones de diferentes grupos musculares.
+                </h4>
+            </div>
+            <div class="full-body">
+                <h3 class="titulo-full">Full Body</h3>
+                <h4 class="desc-full">
+                    Como su nombre indica, el entrenamiento Full Body 
+                    significa que en cada sesión de entrenamiento trabajamos el cuerpo completo, 
+                    por lo que activaremos una gran cantidad de músculos. 
+                    Es una muy buena opción para entrenar en casa, 
+                    tanto si empiezas ahora a entrenar como si ya haces ejercicio de forma habitual. 
+                    Lo ideal es realizarla tres días a la semana, dejando por medio un día de descanso. 
+                    Esa es precisamente una de las ventajas de esta rutina, que, por sus características, 
+                    se puede practicar con más frecuencia que otras
+                </h4>
+            </div>
+        </div>
     </main>
     <aside>
         <ul class="contactos-redes">
