Arreglos de toda la pagina despues de la correccion de la segunda pre-entrega, y agregar sas

--- a/index.html
+++ b/index.html
@@ -4,35 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GYM NEW OPPORT</title>
-    <link rel="shortcut icon" href="./Img/logo.jpg" type="image/x-icon"> 
+    <link rel="shortcut icon" href="./img/logo11.png" type="image/x-icon"> 
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <nav class="navegador">
-        <img class="navegador-img" src="./Img/logo.jpg" alt="">
-        <div class="div-otherPages">
+            <img class="navegador-img" src="./img/logo11.png" alt="">
             <ul class="other-pages">
-                <li class="other-pagesPage"><a href="./comidas.html">Tipo de alimentación</a></li>
-                <li class="other-pagesPage"><a href="./moreinfo.html">Más información</a></li>
-                <li class="other-pagesPage"><a href="./rutinas.html">Tipos de rutinas</a></li>    
+                <li class="other-pagesPage"><a href="./index.html">Inicio</a></li>
+                <li class="other-pagesPage"><a href="./tipo-de-alimentacion.html">Tipo de alimentación</a></li>
+                <li class="other-pagesPage"><a href="./mas-informacion.html">Más información</a></li>
+                <li class="other-pagesPage"><a href="./tipos-de-rutinas.html">Tipos de rutinas</a></li>    
             </ul>
-        </div>
     </nav>
     <header>
         <h1 class="titulo-inicio">GYM NEW OPPORT</h1>
-        <div class="div-inicio">    
-            <div class="div-videoInfo">
-                <iframe class="video-inform" width="500px" height="310px" src="https://www.youtube.com/embed/Q-f2T21zeTE?si=S5gaimS7Ct68bOKk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <div class="inicio">    
+            <div class="videoInformativo">
+                <iframe class="video-videInformativo" width="500px" height="310px" src="https://www.youtube.com/embed/Q-f2T21zeTE?si=S5gaimS7Ct68bOKk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-            <div class="div-descVideo">
-                <h3 class="title-videoInform">Video Informativo</h3>
-                <p class="description-videoInform">En este video se podra apreciar de toda informacion que sea necesaria para interiorizarte un poco en lo que es nuestra pagina.
+            <div class="videoDescription">
+                <h3 class="titulo-videoInformativo">Video Informativo</h3>
+                <p class="description-videoInformatico">En este video se podra apreciar de toda informacion que sea necesaria para interiorizarte un poco en lo que es nuestra pagina.
                     Hablando un poco de lo que hacemos dentro y fuera del entrenamiento, que comemos, como entrenamos, que cargas utilizamos, que frecuencia le damos a cada musculo, que tipo de intensidad manejamos, entre otras cosas.
                 </p>
             </div>
-            <div class="div-myInfo">
-                <h2 class="title-myInfo">Acerca de Mi</h2>
-                <h5 class="my-info">Hola, como estan? Bueno, en esta parte voy a contarles un poco de mi.
+            <div class="miInformacion">
+                <h2 class="titulo-miInformacion">Acerca de Mi</h2>
+                <h5 class="mi-Informacion">Hola, como estan? Bueno, en esta parte voy a contarles un poco de mi.
                 Me llamo Daniel Ramos, tengo 18 años, y soy un apacionado del deporte, y si pudiera decirse enamorado del gimnasio.
                 Actualmente me encuentro haciendo rugby en el club Los Matreros, ubicado en la localidad de Castelar, al lado de la base aerea.
                 En mis tiempos libres intento de aprender cosas nuevas, de todo tipo, pero mas que nada busco cosas para informarme cada vez mas sobre el entrenamiento en el gimnasio.
@@ -43,10 +42,12 @@
         </div>
     </header>
     <main>
-        <img class="graf-inicio" src="./Img/grafico.png" alt="">
-        <div class="div-grafInicio">
-            <div class="div-grafConst">
-                <h3 class="graf-const">En la práctica, casi la mitad de la población se ejercita al menos una vez por semana.
+        <div class="grafico-inicio-img">
+            <img class="grafico-inicio" src="./img/grafico.png" alt="">
+        </div>
+        <div class="graficoInicio">
+            <div class="recurrencia-ejercicio">
+                <h3 class="descripcion-graficos">En la práctica, casi la mitad de la población se ejercita al menos una vez por semana.
                 Esto nos lleva a entender que es un gran porcentaje el cual mantienen a las personas ejercitadas.
                 El ejercitarce aunque sea al menos un dia a la semana, le va a hacer de gran ayuda tanto a tu vida
                 como a tu organismo. El hacer ejercicio no es solo hacerlo porque se te obliga, es algo que 
@@ -54,8 +55,8 @@
 
                 </h3>
             </div>
-            <div class="div-grafAbst">
-                <h3 class="graf-abst">La otra casi mitad de la poblacion que no hace ningun tipo de ejercitacion lamentablemente se pierde
+            <div class="recurrencia-ejercicio">
+                <h3 class="descripcion-graficos">La otra casi mitad de la poblacion que no hace ningun tipo de ejercitacion lamentablemente se pierde
                 de una practia hermosa, que no solo le hace bien a su cuerpo, sino que tambien a su cabeza, a su mente
                 mantener activo el pensamiento de tener que levantarte e ir a moverte o hacer lo que sea, es de gran ayuda
                 para muchas personas. Como a mi me gusta decirlo, el tener ganas de entrenar o hacer ejercicio, es un 
@@ -64,8 +65,8 @@
 
                 </h3>
             </div>
-            <div class="div-grafIrreg">
-                <h3 class="graf-irreg">Hay dentro de los que hacen ejercicio, que no es que son constantes a la hora de
+            <div class="recurrencia-ejercicio">
+                <h3 class="descripcion-graficos">Hay dentro de los que hacen ejercicio, que no es que son constantes a la hora de
                 salir a correr, o ir al gym, sino que lo hacen porque creen que si hacen una semana y la otra no
                 van a ver "cambios", pero en realidad no estan dandole ningun tipo de buen estimulo al musculo,
                 es como la practica de algun tipo de deporte, patear bien la pelota necesita de mucha practica y 
@@ -73,8 +74,8 @@
 
                 </h3>
             </div>
-            <div class="div-grafXqsi">
-                <h3 class="graf-xqsi">Si te sentís indeciso a la hora de empezar a entrenar, ya sea en tu casa, 
+            <div class="recurrencia-ejercicio">
+                <h3 class="descripcion-graficos">Si te sentís indeciso a la hora de empezar a entrenar, ya sea en tu casa, 
                 en la calle, o hasta en un gimnasio, no dudes de que va a ser una muy buena decisión hacerlo. 
                 El estar en la práctica constante  de tener muchos hábitos de levantarte, ir y hacer ejercicio, 
                 y no solo el hábito de hacer ejercicio sino que el hábito de comer bien, descansar bien, y más cosas. 
@@ -88,19 +89,17 @@
     <aside>
         <div>
             <ul class="contactos-redes">
-            <li class="red-ig"><a href="https://www.instagram.com/_daniramos05/">Instagram</a></li>
-            <li class="red-face"><a href="https://www.facebook.com/profile.php?id=100001610584778">Facebook</a></li>
-            <li class="red-num"><p>Numero de Telefono: +54 9 11-3917-7340</p></li>
+                <li class="red-ig"><a href="https://www.instagram.com/_daniramos05/">Instagram</a></li>
+                <li class="red-face"><a href="https://www.facebook.com/profile.php?id=100001610584778">Facebook</a></li>
+                <li class="red-num"><p>Numero de Telefono: +54 9 11-3917-7340</p></li>
             </ul>
         </div>
-        
     </aside>
-    <footer>
+    <footer class="footer">
         <p class="copyright">
             Copyright © Dani Ramos. Todos los derechos reservados 
         </p>
-        
-        <img class="logo-under" src="./Img/logo.jpg" alt="">
+        <img class="logo-de-abajo" src="./img/logo11.png" alt="">
     </footer>
 
 </body>
