--- a/mas-informacion.html
+++ b/mas-informacion.html
@@ -4,27 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GYM NEW OPPORT</title>
-    <link rel="shortcut icon" href="./Img/logo.jpg" type="image/x-icon"> 
+    <link rel="shortcut icon" href="./img/logo11.png" type="image/x-icon"> 
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <nav class="navegador">
-        <img class="navegador-img" src="./Img/logo.jpg" alt="">
-        <div class="div-otherPages">
-            <ul class="other-pages">
-                <li class="other-pagesPage"><a href="./comidas.html">Tipo de alimentación</a></li>
-                <li class="other-pagesPage"><a href="./rutinas.html">Tipos de rutinas</a></li>   
-                <li class="other-pagesPage"><a href="./index.html">Inicio</a></li>  
-            </ul>
-        </div>
+        <img class="navegador-img" src="./img/logo11.png" alt="">
+        <ul class="other-pages">
+            <li class="other-pagesPage"><a href="./index.html">Inicio</a></li>
+            <li class="other-pagesPage"><a href="./tipo-de-alimentacion.html">Tipo de alimentación</a></li>
+            <li class="other-pagesPage"><a href="./mas-informacion.html">Más información</a></li>
+            <li class="other-pagesPage"><a href="./tipos-de-rutinas.html">Tipos de rutinas</a></li>    
+        </ul>
     </nav>
     <header>
-        <h1 class="titulo-info">MÁS INFORMACIÓN</h1>
+        <h1 class="titulo-mas-informacion">MÁS INFORMACIÓN</h1>
     </header>
     <main>
-        <div class="div-masInfo">
-            <img class="img-masInfo" src="./Img/img+info.jpg" alt="">
-            <p class="info-fit"> Bueno, esta parte es para que me conozcan un poquito mas, acerca de mi vida fitnes.
+        <div class="masInformacion">
+            <img class="img-mas-informacion" src="./img/img+info.jpg" alt="">
+            <p class="informacion-fit"> Bueno, esta parte es para que me conozcan un poquito mas, acerca de mi vida fitnes.
             Soy jugador de rugby en el club Los Matreros, donde basicamente paso la gran parte de mi tiempo,
             ya sea entrenando (pasando la pelota, pateando la pelota, etc), corriendo, pero mas que nada 
             me la paso en el gimnasio, aprovechando todo el tiempo del mundo para poder entrenar bien y sentir
@@ -34,15 +33,15 @@
             </p>
         </div>
         <div class="metodos-cambio">
-            <div class="div-video-cambio">
+            <div class="videoCambio">
                 <iframe class="video-cambio" width="560" height="320" src="https://www.youtube.com/embed/VV_al8nS6vY?si=ziaWuPotiTOP27_O" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="flecha">
-                <img class="img-flecha" src="./Img/flecha.jpg" alt="">
+                <img class="img-flecha" src="./img/flecha.jpg" alt="">
             </div>
             <section class="metodos">
             <h3 class="titulo-metodos">Metodos de entrenamiento utilizados por mi:</h3>
-            <h5 class="desc-metodos"> En el ultimo tiempo he estado implementando el metodo "Heavy Duty", siento que al estar
+            <h5 class="descripcion-metodos"> En el ultimo tiempo he estado implementando el metodo "Heavy Duty", siento que al estar
                 usando este metodo hace relativamente poco tiempo, obviamente no voy a sentir ni notar los
                 "respectivos cambios" que deberian aparecer. Al principio de todo, donde arranque a entrenar, 
                 fue en un gimnasio convencional, haciendo rutinas "Full Body", ya que no sabia como organizar
@@ -55,9 +54,9 @@
             </section>
         </div>
         <div class="tipos-metodos">
-            <div class="arnold-split">
-                <h3 class="titulo-arnold">Arnold Split</h3>
-                <h4 class="desc-arnold">
+            <div class="metodos-entrenamiento">
+                <h3 class="titulo-entrenamientos">Arnold Split</h3>
+                <h4 class="descripcion-entrenamientos">
                     El Arnold Split es una división semanal utilizada por Arnold durante su preparación 
                     para su quinto Mr.Olympia en el año de 1974. 
                     El principal problema con el programa original es el volumen de entrenamiento, 
@@ -67,9 +66,9 @@
                     Estas rutinas se repiten dos veces en la semana.
                 </h4>
             </div>
-            <div class="heavy-duty">
-                <h3 class="titulo-heavyDuty">Heavy Duty</h3>
-                <h4 class="desc-heavyDuty">
+            <div class="metodos-entrenamiento">
+                <h3 class="titulo-entrenamientos">Heavy Duty</h3>
+                <h4 class="descripcion-entrenamientos">
                     El Heavy Duty, también considerado una filosofía de entrenamiento, 
                     trata de entrenamientos de muy alta intensidad, poco volumen de sets y repeticiones, 
                     un enfoque muy controlado no solo en las repeticiones positivas (por ejemplo, cuando haces curl de bicep, 
@@ -79,9 +78,9 @@
                     entre sesiones de diferentes grupos musculares.
                 </h4>
             </div>
-            <div class="full-body">
-                <h3 class="titulo-full">Full Body</h3>
-                <h4 class="desc-full">
+            <div class="metodos-entrenamiento">
+                <h3 class="titulo-entrenamientos">Full Body</h3>
+                <h4 class="descripcion-entrenamientos">
                     Como su nombre indica, el entrenamiento Full Body 
                     significa que en cada sesión de entrenamiento trabajamos el cuerpo completo, 
                     por lo que activaremos una gran cantidad de músculos. 
@@ -101,12 +100,11 @@
             <li class="red-num"><p>Numero de Telefono: +54 9 11-3917-7340</p></li>
         </ul>
     </aside>
-    <footer>
+    <footer class="footer">
         <p class="copyright">
             Copyright © Dani Ramos. Todos los derechos reservados 
         </p>
-        
-        <img class="logo-under" src="./Img/logo.jpg" alt="">
+        <img class="logo-de-abajo" src="./img/logo11.png" alt="">
     </footer>
 
 </body>
