Agregue menu en pantalla chica, organice un poco el codigo

--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <title>GYM NEW OPPORT</title>
     <link rel="shortcut icon" href="./img/logo11.png" type="image/x-icon"> 
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <nav class="navegador">
             <img class="navegador-img" src="./img/logo11.png" alt="">
-            <ul class="other-pages">
-                <li class="other-pagesPage"><a href="./index.html">Inicio</a></li>
-                <li class="other-pagesPage"><a href="./tipo-de-alimentacion.html">Tipo de alimentación</a></li>
-                <li class="other-pagesPage"><a href="./mas-informacion.html">Más información</a></li>
-                <li class="other-pagesPage"><a href="./tipos-de-rutinas.html">Tipos de rutinas</a></li>    
+            <i class="icono-menu fa-solid fa-bars"></i>
+            <ul class="navegador-links">
+                <li class="links"><a href="./index.html">Inicio</a></li>
+                <li class="links"><a href="./tipo-de-alimentacion.html">Tipo de alimentación</a></li>
+                <li class="links"><a href="./mas-informacion.html">Más información</a></li>
+                <li class="links"><a href="./tipos-de-rutinas.html">Tipos de rutinas</a></li>    
             </ul>
     </nav>
     <header>
