--- a/tipos-de-rutinas.html
+++ b/tipos-de-rutinas.html
@@ -10,13 +10,14 @@
 <body>
     <nav class="navegador">
         <img class="navegador-img" src="./img/logo11.png" alt="">
-        <ul class="other-pages">
-            <li class="other-pagesPage"><a href="./index.html">Inicio</a></li>
-            <li class="other-pagesPage"><a href="./tipo-de-alimentacion.html">Tipo de alimentación</a></li>
-            <li class="other-pagesPage"><a href="./mas-informacion.html">Más información</a></li>
-            <li class="other-pagesPage"><a href="./tipos-de-rutinas.html">Tipos de rutinas</a></li>    
+        <i class="icono-menu fa-solid fa-bars"></i>
+        <ul class="navegador-links">
+            <li class="links"><a href="./index.html">Inicio</a></li>
+            <li class="links"><a href="./tipo-de-alimentacion.html">Tipo de alimentación</a></li>
+            <li class="links"><a href="./mas-informacion.html">Más información</a></li>
+            <li class="links"><a href="./tipos-de-rutinas.html">Tipos de rutinas</a></li>    
         </ul>
-    </nav>
+</nav>
     <header>
         <h1 class="titulo-rutinas">TIPOS DE RUTINAS</h1>
     </header>
