--- a/mas-informacion.html
+++ b/mas-informacion.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <nav class="navegador">
-        <img class="navegador-img" src="./img/logo11.png" alt="">
-        <ul class="other-pages">
-            <li class="other-pagesPage"><a href="./index.html">Inicio</a></li>
-            <li class="other-pagesPage"><a href="./tipo-de-alimentacion.html">Tipo de alimentación</a></li>
-            <li class="other-pagesPage"><a href="./mas-informacion.html">Más información</a></li>
-            <li class="other-pagesPage"><a href="./tipos-de-rutinas.html">Tipos de rutinas</a></li>    
-        </ul>
+<nav class="navegador">
+            <img class="navegador-img" src="./img/logo11.png" alt="">
+            <i class="icono-menu fa-solid fa-bars"></i>
+            <ul class="navegador-links">
+                <li class="links"><a href="./index.html">Inicio</a></li>
+                <li class="links"><a href="./tipo-de-alimentacion.html">Tipo de alimentación</a></li>
+                <li class="links"><a href="./mas-informacion.html">Más información</a></li>
+                <li class="links"><a href="./tipos-de-rutinas.html">Tipos de rutinas</a></li>    
+            </ul>
     </nav>
     <header>
         <h1 class="titulo-mas-informacion">MÁS INFORMACIÓN</h1>
