Actualizacion del grafico

--- a/index.html
+++ b/index.html
@@ -1,108 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GYM NEW OPPORT</title>
-    <link rel="shortcut icon" href="./img/logo11.png" type="image/x-icon"> 
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
+    <link rel="shortcut icon" href="./img/logo11.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <nav class="navegador">
-            <img class="navegador-img" src="./img/logo11.png" alt="">
-            <i class="icono-menu fa-solid fa-bars"></i>
-            <ul class="navegador-links">
-                <li class="links"><a href="./index.html">Inicio</a></li>
-                <li class="links"><a href="./tipo-de-alimentacion.html">Tipo de alimentación</a></li>
-                <li class="links"><a href="./mas-informacion.html">Más información</a></li>
-                <li class="links"><a href="./tipos-de-rutinas.html">Tipos de rutinas</a></li>    
-            </ul>
+      <img class="navegador-img" src="./img/logo11.png" alt="" />
+      <i class="icono-menu fa-solid fa-bars"></i>
+      <ul class="navegador-links">
+        <li class="links"><a href="./index.html">Inicio</a></li>
+        <li class="links">
+          <a href="./tipo-de-alimentacion.html">Tipo de alimentación</a>
+        </li>
+        <li class="links">
+          <a href="./mas-informacion.html">Más información</a>
+        </li>
+        <li class="links">
+          <a href="./tipos-de-rutinas.html">Tipos de rutinas</a>
+        </li>
+      </ul>
     </nav>
     <header>
-        <h1 class="titulo-inicio">GYM NEW OPPORT</h1>
-        <div class="inicio">    
-            <div class="videoInformativo">
-                <iframe class="video-videInformativo" width="500px" height="310px" src="https://www.youtube.com/embed/Q-f2T21zeTE?si=S5gaimS7Ct68bOKk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-            <div class="videoDescription">
-                <h3 class="titulo-videoInformativo">Video Informativo</h3>
-                <p class="description-videoInformatico">En este video se podra apreciar de toda informacion que sea necesaria para interiorizarte un poco en lo que es nuestra pagina.
-                    Hablando un poco de lo que hacemos dentro y fuera del entrenamiento, que comemos, como entrenamos, que cargas utilizamos, que frecuencia le damos a cada musculo, que tipo de intensidad manejamos, entre otras cosas.
-                </p>
-            </div>
-            <div class="miInformacion">
-                <h2 class="titulo-miInformacion">Acerca de Mi</h2>
-                <h5 class="mi-Informacion">Hola, como estan? Bueno, en esta parte voy a contarles un poco de mi.
-                Me llamo Daniel Ramos, tengo 18 años, y soy un apacionado del deporte, y si pudiera decirse enamorado del gimnasio.
-                Actualmente me encuentro haciendo rugby en el club Los Matreros, ubicado en la localidad de Castelar, al lado de la base aerea.
-                En mis tiempos libres intento de aprender cosas nuevas, de todo tipo, pero mas que nada busco cosas para informarme cada vez mas sobre el entrenamiento en el gimnasio.
-                Si pudiera me la pasaria en el gym, entreno de lunes a viernes, a veces si no llego tan cansado los sabados tambien, pero intento de que no, porque con el rugby los domingos tengo partido, y llegar cargado y no desempeñarme bien, no me gusta mucho.
-                Asi que con todo esto, te invito a que no te vayas de esta pagina y si te interesa lo que ves, sigas viendo un poco mas.
-                </h5>
-            </div>
+      <h1 class="titulo-inicio">GYM NEW OPPORT</h1>
+      <div class="inicio">
+        <div class="videoInformativo">
+          <iframe
+            class="video-videInformativo"
+            width="500px"
+            height="310px"
+            src="https://www.youtube.com/embed/Q-f2T21zeTE?si=S5gaimS7Ct68bOKk"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
         </div>
+        <div class="videoDescription">
+          <h3 class="titulo-videoInformativo">Video Informativo</h3>
+          <p class="description-videoInformatico">
+            En este video se podra apreciar de toda informacion que sea
+            necesaria para interiorizarte un poco en lo que es nuestra pagina.
+            Hablando un poco de lo que hacemos dentro y fuera del entrenamiento,
+            que comemos, como entrenamos, que cargas utilizamos, que frecuencia
+            le damos a cada musculo, que tipo de intensidad manejamos, entre
+            otras cosas.
+          </p>
+        </div>
+        <div class="miInformacion">
+          <h2 class="titulo-miInformacion">Acerca de Mi</h2>
+          <h5 class="mi-Informacion">
+            Hola, como estan? Bueno, en esta parte voy a contarles un poco de
+            mi. Me llamo Daniel Ramos, tengo 18 años, y soy un apacionado del
+            deporte, y si pudiera decirse enamorado del gimnasio. Actualmente me
+            encuentro haciendo rugby en el club Los Matreros, ubicado en la
+            localidad de Castelar, al lado de la base aerea. En mis tiempos
+            libres intento de aprender cosas nuevas, de todo tipo, pero mas que
+            nada busco cosas para informarme cada vez mas sobre el entrenamiento
+            en el gimnasio. Si pudiera me la pasaria en el gym, entreno de lunes
+            a viernes, a veces si no llego tan cansado los sabados tambien, pero
+            intento de que no, porque con el rugby los domingos tengo partido, y
+            llegar cargado y no desempeñarme bien, no me gusta mucho. Asi que
+            con todo esto, te invito a que no te vayas de esta pagina y si te
+            interesa lo que ves, sigas viendo un poco mas.
+          </h5>
+        </div>
+      </div>
     </header>
     <main>
-        <div class="grafico-inicio-img">
-            <img class="grafico-inicio" src="./img/grafico.png" alt="">
+      <div class="grafico-inicio-img">
+        <img class="grafico-inicio" src="./img/grafico1.png" alt="" />
+      </div>
+      <div class="graficoInicio">
+        <div class="recurrencia-ejercicio">
+          <h3 class="descripcion-graficos">
+            En la práctica, casi la mitad de la población se ejercita al menos
+            una vez por semana. Esto nos lleva a entender que es un gran
+            porcentaje el cual mantienen a las personas ejercitadas. El
+            ejercitarce aunque sea al menos un dia a la semana, le va a hacer de
+            gran ayuda tanto a tu vida como a tu organismo. El hacer ejercicio
+            no es solo hacerlo porque se te obliga, es algo que te gusta y te
+            llama la atencion, y te moves para poder aunque sea salir a correr,
+            o ir a algun gimnasio.
+          </h3>
         </div>
-        <div class="graficoInicio">
-            <div class="recurrencia-ejercicio">
-                <h3 class="descripcion-graficos">En la práctica, casi la mitad de la población se ejercita al menos una vez por semana.
-                Esto nos lleva a entender que es un gran porcentaje el cual mantienen a las personas ejercitadas.
-                El ejercitarce aunque sea al menos un dia a la semana, le va a hacer de gran ayuda tanto a tu vida
-                como a tu organismo. El hacer ejercicio no es solo hacerlo porque se te obliga, es algo que 
-                te gusta y te llama la atencion, y te moves para poder aunque sea salir a correr, o ir a algun gimnasio.
-
-                </h3>
-            </div>
-            <div class="recurrencia-ejercicio">
-                <h3 class="descripcion-graficos">La otra casi mitad de la poblacion que no hace ningun tipo de ejercitacion lamentablemente se pierde
-                de una practia hermosa, que no solo le hace bien a su cuerpo, sino que tambien a su cabeza, a su mente
-                mantener activo el pensamiento de tener que levantarte e ir a moverte o hacer lo que sea, es de gran ayuda
-                para muchas personas. Como a mi me gusta decirlo, el tener ganas de entrenar o hacer ejercicio, es un 
-                privilegio en la sociedad, como veran en porcentajes, no todos tienen esa capacidad para salir aunque sea
-                a correr, o caminar.
-
-                </h3>
-            </div>
-            <div class="recurrencia-ejercicio">
-                <h3 class="descripcion-graficos">Hay dentro de los que hacen ejercicio, que no es que son constantes a la hora de
-                salir a correr, o ir al gym, sino que lo hacen porque creen que si hacen una semana y la otra no
-                van a ver "cambios", pero en realidad no estan dandole ningun tipo de buen estimulo al musculo,
-                es como la practica de algun tipo de deporte, patear bien la pelota necesita de mucha practica y 
-                dedicación  para poder pegarle bien y que sea eficiente el golpe a la pelota y muchos factores mas.
-
-                </h3>
-            </div>
-            <div class="recurrencia-ejercicio">
-                <h3 class="descripcion-graficos">Si te sentís indeciso a la hora de empezar a entrenar, ya sea en tu casa, 
-                en la calle, o hasta en un gimnasio, no dudes de que va a ser una muy buena decisión hacerlo. 
-                El estar en la práctica constante  de tener muchos hábitos de levantarte, ir y hacer ejercicio, 
-                y no solo el hábito de hacer ejercicio sino que el hábito de comer bien, descansar bien, y más cosas. 
-                Esa decisión le va a hacer bien tanto a tu vida, como salud, como a tu organismo y a tu mente. 
-                Desafíate y arranca a entrenar.
-
-                </h3>
-            </div>
+        <div class="recurrencia-ejercicio">
+          <h3 class="descripcion-graficos">
+            La otra casi mitad de la poblacion que no hace ningun tipo de
+            ejercitacion lamentablemente se pierde de una practia hermosa, que
+            no solo le hace bien a su cuerpo, sino que tambien a su cabeza, a su
+            mente mantener activo el pensamiento de tener que levantarte e ir a
+            moverte o hacer lo que sea, es de gran ayuda para muchas personas.
+            Como a mi me gusta decirlo, el tener ganas de entrenar o hacer
+            ejercicio, es un privilegio en la sociedad, como veran en
+            porcentajes, no todos tienen esa capacidad para salir aunque sea a
+            correr, o caminar.
+          </h3>
         </div>
+        <div class="recurrencia-ejercicio">
+          <h3 class="descripcion-graficos">
+            Hay dentro de los que hacen ejercicio, que no es que son constantes
+            a la hora de salir a correr, o ir al gym, sino que lo hacen porque
+            creen que si hacen una semana y la otra no van a ver "cambios", pero
+            en realidad no estan dandole ningun tipo de buen estimulo al
+            musculo, es como la practica de algun tipo de deporte, patear bien
+            la pelota necesita de mucha practica y dedicación para poder pegarle
+            bien y que sea eficiente el golpe a la pelota y muchos factores mas.
+          </h3>
+        </div>
+        <div class="recurrencia-ejercicio">
+          <h3 class="descripcion-graficos">
+            Si te sentís indeciso a la hora de empezar a entrenar, ya sea en tu
+            casa, en la calle, o hasta en un gimnasio, no dudes de que va a ser
+            una muy buena decisión hacerlo. El estar en la práctica constante de
+            tener muchos hábitos de levantarte, ir y hacer ejercicio, y no solo
+            el hábito de hacer ejercicio sino que el hábito de comer bien,
+            descansar bien, y más cosas. Esa decisión le va a hacer bien tanto a
+            tu vida, como salud, como a tu organismo y a tu mente. Desafíate y
+            arranca a entrenar.
+          </h3>
+        </div>
+      </div>
     </main>
     <aside>
-        <div>
-            <ul class="contactos-redes">
-                <li class="red-ig"><a href="https://www.instagram.com/_daniramos05/">Instagram</a></li>
-                <li class="red-face"><a href="https://www.facebook.com/profile.php?id=100001610584778">Facebook</a></li>
-                <li class="red-num"><p>Numero de Telefono: +54 9 11-3917-7340</p></li>
-            </ul>
-        </div>
+      <div>
+        <ul class="contactos-redes">
+          <li class="red-ig">
+            <a href="https://www.instagram.com/_daniramos05/">Instagram</a>
+          </li>
+          <li class="red-face">
+            <a href="https://www.facebook.com/profile.php?id=100001610584778"
+              >Facebook</a
+            >
+          </li>
+          <li class="red-num"><p>Numero de Telefono: +54 9 11-3917-7340</p></li>
+        </ul>
+      </div>
     </aside>
     <footer class="footer">
-        <p class="copyright">
-            Copyright © Dani Ramos. Todos los derechos reservados 
-        </p>
-        <img class="logo-de-abajo" src="./img/logo11.png" alt="">
+      <p class="copyright">
+        Copyright © Dani Ramos. Todos los derechos reservados
+      </p>
+      <img class="logo-de-abajo" src="./img/logo11.png" alt="" />
     </footer>
-
-</body>
+  </body>
 </html>
